# hire-mind

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  main.py  pyproject.toml  test_config.py  test_error_handling.py
backend/alembic/: env.py
backend/alembic/versions/: 2e4a80d73ff6_initial_migration_create_all_tables.py  9b935c0d910e_refactor_user_model_to_use_clerk_id_as_.py
backend/app/api/auth/: webhook.py
backend/app/api/middleware/: clerk_middleware.py  logging.py  rate_limiting.py
backend/app/api/v1/: router.py
backend/app/config/: logging.py  settings.py
backend/app/core/: dependencies.py  security.py
backend/app/db/: base.py  enums.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/models/: user.py  (+7 more)
backend/app/exceptions/: auth_exceptions.py
backend/app/repositories/: __init__.py  job_listing_application_repository.py  job_listing_repository.py  organization_repository.py  organization_user_settings_repository.py  user_notification_settings_repository.py  user_repository.py  user_resume_repository.py
backend/app/schemas/: job_listing.py  job_listing_application.py  organization.py  organization_user_settings.py  user.py  user_notification_settings.py  user_resume.py
backend/app/services/: __init__.py  job_listing_application_service.py  job_listing_service.py  organization_service.py  organization_user_settings_service.py  user_notification_settings_service.py  user_resume_service.py  user_service.py
backend/app/tests/: test_db.py
backend/docs/: fastapi_folder_structure.txt  now.txt
backend/scripts/: seed.py
(+45 files in other folders)
