[project]
name = "backend"
version = "0.1.0"
description = "AI Job Board Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary", # Or asyncpg if you prefer async driver
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "clerk-backend-api>=3.0.5",
    "requests>=2.32.4",
    "httpx>=0.28.1",
    "cachetools>=6.1.0",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "svix>=1.69.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
